--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,7 +4,7 @@
         <h3>Menu</h3>
         <hr>
       </div>
-   </div>
+    </div>
     <div class="row ">
       <h4 class="col-12">Our famous chocolates</h4>
       <div class="media" *ngFor="let dish of dishes">
@@ -33,5 +33,6 @@
             </div>
           </div>
         </div>
-      </div>
-  </div>
+    </div>
+</div>
+<app-dishdetail></app-dishdetail>
