Angular (Data Binding / Routing)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,5 +10,6 @@
       </div>
   </div>
 </header>
-<app-menu></app-menu>
+<!-- <app-menu></app-menu> -->
+<router-outlet></router-outlet>
 <app-footer></app-footer>
