--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,6 +9,7 @@
                     <li><a href="#">Menu</a></li> -->
                     <li><a routerLink="/home" >Home</a></li>
                     <li><a routerLink="/menu" >Menu</a></li>
+                    <li><a routerLink="/about" >About</a></li>
                 </ul>
             </div>
             <div class="col-6 col-sm-5"> <!--adress-->
